--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.airlinecompanymanagment/com.example.airlinecompanymanagment.HelloApplication
+                                com.example.airlinecompanymanagment/com.example.airlinecompanymanagment.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
